Bugfix: Removing unwanted spacing on the bottom of image

--- a/includes/modules/Image/style.css
+++ b/includes/modules/Image/style.css
@@ -1,3 +1,7 @@
+.sae_image {
+	line-height: 0;
+}
+
 .sae_image .sae-image-wrapper figure {
 	margin: 0;
 }
